# LiveStageAI-2

./: .gitignore  BUILD_ENGINE_M1.bat  BUILD_ENGINE_M3.bat  CMakeLists.txt  RUN_ENGINE_M1.bat  RUN_ENGINE_M3.bat
App/: ArrangerCoreProof.cpp
Engine/: ArrangerEngine.h  ArrangerEngine_M2_BACKUP.cpp  ArrangerEngine_M3_BACKUP.cpp  SoundFontEngine.cpp  SoundFontEngine.h  TimingEngine.cpp  TimingEngine.h
